[tool.poetry]
name = "divik"
version = "3.0.4"
description = "Divisive iK-means algorithm implementation"
authors = ["Grzegorz Mrukwa <g.mrukwa@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gmrukwa/divik"
repository = "https://github.com/gmrukwa/divik"
documentation = "https://divik.readthedocs.io/"
classifiers = [
    # based on https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
]
include = [
    "gamred_native",
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
dask = {extras = ["dataframe"], version = ">=2.14.0"}
dask-distance = "^0.2.0"
h5py = ">=2.8.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
kneed = ">=0.5.1"
matplotlib = "^3.3.3"
numpy = ">=0.12.1"
pandas = ">=0.20.3"
scipy = ">=0.19.1"
scikit-image = ">=0.14.1"
scikit-learn = ">=0.19.0"
tqdm = ">=4.11.2"
joblib = "^1.0.0"
polyaxon = {version = "^1.5.0", optional = true}
gin-config = {version = "^0.4.0", optional = true}

[tool.poetry.extras]
gin = ["gin-config"]
polyaxon = ["polyaxon"]
all = ["gin-config", "polyaxon"]

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"
polyaxon = "^1.5.0"
gin-config = "^0.4.0"
isort = "^5.7.0"
Sphinx = "^3.4.3"
sphinx-markdown-builder = "^0.5.4"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.1"
numpydoc = "^1.1.0"
pytest = "^6.2.1"
black = "^19.10b0"

[tool.poetry.scripts]
fit-clusters = "divik._cli.fit_clusters:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "numpy>=0.12.1",
]
build-backend = "poetry.core.masonry.api"
